# techno_IZ1

./: CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
include/: date.h
src/: date.c  main.c
tests/: tests.cpp
